Tutorial https://marmelab.com/react-admin/Tutorial.html Setting Up

--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.7.2",
+    "ra-data-json-server": "^2.8.0",
     "react": "^16.8.4",
+    "react-admin": "^2.8.2",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
   },
