--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "test-admin",
+  "name": "react-admin-tutorial",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "prop-types": "^15.7.2",
-    "ra-data-json-server": "^2.8.0",
-    "react": "^16.8.4",
-    "react-admin": "^2.8.2",
-    "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "ra-data-json-server": "^3.1.1",
+    "react": "^16.12.0",
+    "react-admin": "^3.1.1",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,10 +22,16 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
